--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "ch-tarea2",
+  "name": "ch-tareas",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "type": "module",
-  "devDependencies": {},
   "scripts": {
     "start": "node app.js",
     "test": "node test.js"
   },
   "author": "Marcelo Aguirre",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "fs": "^0.0.1-security"
+  }
 }
