--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js",
-    "test": "node test.js"
+    "start": "node ./src/app.js",
+    "dev": "nodemon ./src/app.js",
+    "test": "node ./src/app.js"
   },
   "author": "Marcelo Aguirre",
   "license": "ISC",
   "dependencies": {
-    "fs": "^0.0.1-security"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "nodemon": "^3.0.1"
   }
 }
