--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node ./src/app.js",
     "dev": "nodemon ./src/app.js",
-    "test": "node ./src/app.js"
+    "test": "node ./src/app.js",
+    "load": "node ./src/load.js"
   },
   "author": "Marcelo Aguirre",
   "license": "ISC",
