--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node ./src/app.js",
-    "dev": "nodemon ./src/app.js",
-    "test": "node ./src/app.js",
-    "load": "node ./src/load.js"
+    "start": "node ./app.js",
+    "dev": "nodemon ./app.js",
+    "test": "node ./app.js",
+    "load": "node ./load.js"
   },
   "author": "Marcelo Aguirre",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
   }
 }
