--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node ./app.js",
-    "dev": "nodemon ./app.js",
-    "test": "node ./app.js",
-    "load": "node ./load.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
+    "test": "node src/app.js",
+    "load": "node src/load.js"
   },
   "author": "Marcelo Aguirre",
   "license": "ISC",
@@ -16,9 +16,11 @@
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2",
     "uuid": "^9.0.1"
   }
 }
