--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
