--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "author": "Marcelo Aguirre",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
@@ -21,7 +20,6 @@
     "http": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
-    "socket.io": "^4.7.2",
-    "uuid": "^9.0.1"
+    "socket.io": "^4.7.2"
   }
 }
