--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 PORT=3000
 PATH_PRODUCTS="./db/products.json"
 PATH_CARTS="./db/carts.json"
+MONGO_URL="mongodb+srv://<USER>:<PASSWORD>@<URL>/?retryWrites=true&w=majority""
