--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,12 @@ dist
 files/*
 
 .vscode
+/test-results/
+/playwright-report/
+/playwright/.cache/
+/test-results/
+/playwright-report/
+/playwright/.cache/
+
+/tests
+playwright.config.js
