--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "node src/app.js",
-    "load": "node src/load.js"
+    "test": "npx playwright test"
   },
   "author": "Marcelo Aguirre",
   "license": "ISC",
@@ -22,5 +21,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.39.0",
+    "@types/node": "^20.8.9"
   }
 }
