--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 PORT=3000
 PATH_PRODUCTS="./db/products.json"
 PATH_CARTS="./db/carts.json"
-MONGO_URL="mongodb+srv://<USER>:<PASSWORD>@<URL>/?retryWrites=true&w=majority""
+MONGO_URL="mongodb+srv://<USER>:<PASSWORD>@<URL>/?retryWrites=true&w=majority"
+URL="http://localhost"
+SECRET_KEY="secret"
