--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "Marcelo Aguirre",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "mongoose": "^7.6.3",
