--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ PATH_CARTS="./db/carts.json"
 MONGO_URL="mongodb+srv://<USER>:<PASSWORD>@<URL>/?retryWrites=true&w=majority"
 URL="http://localhost"
 SECRET_KEY="secret"
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_CALLBACK_URL=
