--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Marcelo Aguirre",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -23,6 +24,9 @@
     "mongoose-paginate-v2": "^1.7.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
