--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ PATH_PRODUCTS="./db/products.json"
 PATH_CARTS="./db/carts.json"
 MONGO_URL="mongodb+srv://<USER>:<PASSWORD>@<URL>/?retryWrites=true&w=majority"
 URL="http://localhost"
-SECRET_KEY="secret"
+SECRET_SESSION=
+SECRET_JWT=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_CALLBACK_URL=
