--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "uid": "^2.0.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
