--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "uid": "^2.0.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@playwright/test": "^1.39.0",
     "@types/node": "^20.8.9"
   }
