add nodemailer and recovery user

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,17 @@
-PORT=3000
-PATH_PRODUCTS="./db/products.json"
-PATH_CARTS="./db/carts.json"
-MONGO_URL="mongodb+srv://<USER>:<PASSWORD>@<URL>/?retryWrites=true&w=majority"
-URL="http://localhost"
+PORT=
+PATH_PRODUCTS=
+PATH_CARTS=
+MONGO_URL=
+MONGO_DB_NAME=
+URL=
 SECRET_SESSION=
 SECRET_JWT=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_CALLBACK_URL=
-PERSISTENCE=MONGO
-MONGO_DB_NAME=ecommerce
+NODE_ENV=
+PERSISTENCE=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
